<?xml version="1.0"?>
<package format="2">
  <name>knowrob_ameva</name>
  <version>0.1.0</version>
  <description>The knowrob_ameva package</description>

  <maintainer email="xiaojun.real@outlook.com">Xiaojun Lan</maintainer>

  <author>Xiaojun Lan</author>

  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
